[package]
name = "caddy-pretty-print"
description = "A CLI tool to pretty print Caddy json logs."
version = "0.1.0"
authors = ["Mattia Penati <mattia.penati@protonmail.com>"]
edition = "2021"
license = "Apache-2.0 OR MIT"
keywords = ["caddy"]
homepage = "https://github.com/mattiapenati/caddy-pretty-print"
repository = "https://github.com/mattiapenati/caddy-pretty-print"

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.3", features = ["cargo", "derive", "wrap_help"] }
colored = "2.1.0"
glob = "0.3.1"
http = "1.1.0"
http-serde = "2.0.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_with = "3.7.0"
terminal_size = "0.3.0"
time = { version = "0.3.34", features = ["formatting", "macros"] }
